--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+*.pdf filter=lfs diff=lfs merge=lfs -text
 public/katalog_proizvedeno_v_kchr_RU.pdf filter=lfs diff=lfs merge=lfs -text
 public/katalog_proizvedeno_v_kchr_ENG.pdf filter=lfs diff=lfs merge=lfs -text
