--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-admin": "^5.4.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-modal": "^3.16.3",
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
