--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "mammoth": "^1.8.0",
+    "pdf-parse": "^1.1.1",
     "vite": "^5.1.0"
   }
 }
